# bluealsa-hfp-ag-plugin

./: 21-bluealsa-hfpag.conf  LICENSE  README.md  hfpag-dbus.c  hfpag-hook.c  hfpag-session.c  hfpag-session.h  meson.build
bluez-alsa/: LICENSE  README.md  dbus-client.c  meson.build
